finish basic api swaggers
